src/iMOABF.F90

! iMOAB Interface for Fortran 90/2003/2008 compatible compilers

#include "moab/MOABConfig.h"

module iMOAB

   use iso_c_binding
   implicit none

! Entry points that take a string are declared below with a _c suffix and are
! private; each one is fronted by a module procedure of the plain name in the
! CONTAINS section, which NUL-terminates its character arguments before
! forwarding.  Callers therefore pass ordinary Fortran strings and never have to
! append C_NULL_CHAR themselves.  Code that still appends it keeps working - see
! the note on to_c_string.
   private :: to_c_string
   private :: iMOAB_RegisterApplication_c, iMOAB_ReadHeaderInfo_c, iMOAB_LoadMesh_c
   private :: iMOAB_WriteMesh_c, iMOAB_WriteLocalMesh_c, iMOAB_DefineTagStorage_c
   private :: iMOAB_SetIntTagStorage_c, iMOAB_GetIntTagStorage_c
   private :: iMOAB_SetDoubleTagStorage_c, iMOAB_SetDoubleTagStorageWithGid_c
   private :: iMOAB_GetDoubleTagStorage_c
#ifdef MOAB_HAVE_MPI
   private :: iMOAB_SendElementTag_c, iMOAB_ReceiveElementTag_c, iMOAB_DumpCommGraph_c
#endif
#ifdef MOAB_HAVE_TEMPESTREMAP
   private :: iMOAB_WriteCoverageMesh_c
   private :: iMOAB_ComputeScalarProjectionWeights_c, iMOAB_ApplyScalarProjectionWeights_c
#ifdef MOAB_HAVE_NETCDF
   private :: iMOAB_LoadMapFile_c, iMOAB_WriteMapFile_c
#endif
#endif

! Interface to all the API routines
   interface

      integer(c_int) function iMOAB_Initialize() bind(C, name='iMOAB_InitializeFortran')
         ! Directly forward the call
         use, intrinsic :: iso_c_binding, only: c_int
      end function iMOAB_Initialize

      integer(c_int) function iMOAB_Finalize() bind(C, name='iMOAB_Finalize')
         ! Directly forward the call
         use, intrinsic :: iso_c_binding, only: c_int
      end function iMOAB_Finalize

#ifdef MOAB_HAVE_MPI
      integer(c_int) function iMOAB_RegisterApplication_c(app_name, fcomm, compid, pid) &
                              bind(C, name='iMOAB_RegisterApplicationFortran')
#else
      integer(c_int) function iMOAB_RegisterApplication_c(app_name, compid, pid) &
                              bind(C, name='iMOAB_RegisterApplicationFortran')
#endif
        ! Interface blocks don't know about their context,
        ! so we need to use iso_c_binding inside all interface functions again
        use, intrinsic :: iso_c_binding, only: c_int, c_char, c_ptr
        character(kind=c_char), intent(in) :: app_name(*)
#ifdef MOAB_HAVE_MPI
        integer, intent(in) :: fcomm
#endif
        integer(c_int), intent(in) :: compid
        integer(c_int), intent(out) :: pid
      end function iMOAB_RegisterApplication_c

      integer(c_int) function iMOAB_DeregisterApplication(pid) bind(C, name='iMOAB_DeregisterApplicationFortran')
        use, intrinsic :: iso_c_binding, only: c_int
        integer(c_int), intent(in) :: pid
      end function iMOAB_DeregisterApplication

      integer(c_int) function iMOAB_ReadHeaderInfo_c(filename, num_global_vertices, num_global_elements, &
                                                   num_dimension, num_parts) bind(C, name='iMOAB_ReadHeaderInfo')
        use, intrinsic :: iso_c_binding, only: c_int, c_char
        character(kind=c_char), intent(in) :: filename(*)
        integer(c_int), intent(out) :: num_global_vertices
        integer(c_int), intent(out) :: num_global_elements
        integer(c_int), intent(out) :: num_dimension
        integer(c_int), intent(out) :: num_parts
      end function iMOAB_ReadHeaderInfo_c

      integer(c_int) function iMOAB_LoadMesh_c(pid, filename, read_options, num_ghost_layers) &
                              bind(C, name='iMOAB_LoadMesh')
        use, intrinsic :: iso_c_binding, only: c_int, c_char
        integer(c_int), intent(in) :: pid
        character(kind=c_char), intent(in) :: filename(*)
        character(kind=c_char), intent(in) :: read_options(*)
        integer(c_int), intent(in) :: num_ghost_layers
      end function iMOAB_LoadMesh_c

      integer(c_int) function iMOAB_CreateVertices(pid, coords_len, dim, coordinates) bind(C, name='iMOAB_CreateVertices')
        use, intrinsic :: iso_c_binding, only: c_int, c_double
        integer(c_int), intent(in) :: pid
        integer(c_int), intent(in) :: coords_len
        integer(c_int), intent(in) :: dim
        real(c_double), intent(in) :: coordinates(*)
      end function iMOAB_CreateVertices

      integer(c_int) function iMOAB_CreateElements(pid, num_elem, type, num_nodes_per_element, &
                                                   connectivity, block_ID) bind(C, name='iMOAB_CreateElements')
        use, intrinsic :: iso_c_binding, only: c_int
        integer(c_int), intent(in) :: pid
        integer(c_int), intent(in) :: num_elem
        integer(c_int), intent(in) :: type
        integer(c_int), intent(in) :: num_nodes_per_element
        integer(c_int), intent(in) :: connectivity(*)
        integer(c_int), intent(in) :: block_ID
      end function iMOAB_CreateElements

      integer(c_int) function iMOAB_ResolveSharedEntities(pid, num_verts, marker) bind(C, name='iMOAB_ResolveSharedEntities')
        use, intrinsic :: iso_c_binding, only: c_int
        integer(c_int), intent(in) :: pid
        integer(c_int), intent(in) :: num_verts
        integer(c_int), intent(in) :: marker(*)
      end function iMOAB_ResolveSharedEntities

      integer(c_int) function iMOAB_DetermineGhostEntities(pid, ghost_dim, num_ghost_layers, bridge_dim) &
                              bind(C, name='iMOAB_DetermineGhostEntities')
        use, intrinsic :: iso_c_binding, only: c_int
        integer(c_int), intent(in) :: pid
        integer(c_int), intent(in) :: ghost_dim
        integer(c_int), intent(in) :: num_ghost_layers
        integer(c_int), intent(in) :: bridge_dim
      end function iMOAB_DetermineGhostEntities

      integer(c_int) function iMOAB_WriteMesh_c(pid, filename, write_options) bind(C, name='iMOAB_WriteMesh')
        use, intrinsic :: iso_c_binding, only: c_int, c_char
        integer(c_int), intent(in) :: pid
        character(kind=c_char), intent(in) :: filename(*)
        character(kind=c_char), intent(in) :: write_options(*)
      end function iMOAB_WriteMesh_c

      integer(c_int) function iMOAB_UpdateMeshInfo(pid) bind(C, name='iMOAB_UpdateMeshInfo')
        use, intrinsic :: iso_c_binding, only: c_int
        integer(c_int), intent(in) :: pid
      end function iMOAB_UpdateMeshInfo

      integer(c_int) function iMOAB_GetMeshInfo(pid, num_visible_vertices, num_visible_elements, &
                                                num_visible_blocks, num_visible_surfaceBC, &
                                                num_visible_vertexBC) bind(C, name='iMOAB_GetMeshInfo')
        use, intrinsic :: iso_c_binding, only: c_int
        integer(c_int), intent(in) :: pid
        integer(c_int), intent(out) :: num_visible_vertices(3)
        integer(c_int), intent(out) :: num_visible_elements(3)
        integer(c_int), intent(out) :: num_visible_blocks(3)
        integer(c_int), intent(out) :: num_visible_surfaceBC(3)
        integer(c_int), intent(out) :: num_visible_vertexBC(3)
      end function iMOAB_GetMeshInfo

      integer(c_int) function iMOAB_GetVertexID(pid, vertices_length, global_vertex_ID) bind(C, name='iMOAB_GetVertexID')
        use, intrinsic :: iso_c_binding, only: c_int
        integer(c_int), intent(in) :: pid
        integer(c_int), intent(in) :: vertices_length
        integer(c_int), intent(out) :: global_vertex_ID(*)
      end function iMOAB_GetVertexID

      integer(c_int) function iMOAB_GetVertexOwnership(pid, vertices_length, visible_global_rank_ID) &
                              bind(C, name='iMOAB_GetVertexOwnership')
        use, intrinsic :: iso_c_binding, only: c_int
        integer(c_int), intent(in) :: pid
        integer(c_int), intent(in) :: vertices_length
        integer(c_int), intent(out) :: visible_global_rank_ID(*)
      end function iMOAB_GetVertexOwnership

      integer(c_int) function iMOAB_GetVisibleVerticesCoordinates(pid, coords_length, coordinates) &
                              bind(C, name='iMOAB_GetVisibleVerticesCoordinates')
        use, intrinsic :: iso_c_binding, only: c_int, c_double
        integer(c_int), intent(in) :: pid
        integer(c_int), intent(in) :: coords_length
        real(c_double), intent(out) :: coordinates(*)
      end function iMOAB_GetVisibleVerticesCoordinates

      integer(c_int) function iMOAB_GetBlockID(pid, block_length, global_block_IDs) bind(C, name='iMOAB_GetBlockID')
        use, intrinsic :: iso_c_binding, only: c_int
        integer(c_int), intent(in) :: pid
        integer(c_int), intent(in) :: block_length
        integer(c_int), intent(out) :: global_block_IDs(*)
      end function iMOAB_GetBlockID

      integer(c_int) function iMOAB_GetBlockInfo(pid, global_block_ID, vertices_per_element, &
                                                num_elements_in_block) bind(C, name='iMOAB_GetBlockInfo')
        use, intrinsic :: iso_c_binding, only: c_int
        integer(c_int), intent(in) :: pid
        integer(c_int), intent(in) :: global_block_ID
        integer(c_int), intent(out) :: vertices_per_element
        integer(c_int), intent(out) :: num_elements_in_block
      end function iMOAB_GetBlockInfo

      integer(c_int) function iMOAB_GetVisibleElementsInfo(pid, num_visible_elements, element_global_IDs, &
                                                          ranks, block_IDs) bind(C, name='iMOAB_GetVisibleElementsInfo')
        use, intrinsic :: iso_c_binding, only: c_int
        integer(c_int), intent(in) :: pid
        integer(c_int), intent(out) :: num_visible_elements
        integer(c_int), intent(out) :: element_global_IDs(*)
        integer(c_int), intent(out) :: ranks(*)
        integer(c_int), intent(out) :: block_IDs(*)
      end function iMOAB_GetVisibleElementsInfo

      integer(c_int) function iMOAB_GetBlockElementConnectivities(pid, global_block_ID, connectivity_length, &
                                                                  element_connectivity) &
                                                                  bind(C, name='iMOAB_GetBlockElementConnectivities')
        use, intrinsic :: iso_c_binding, only: c_int
        integer(c_int), intent(in) :: pid
        integer(c_int), intent(in) :: global_block_ID
        integer(c_int), intent(in) :: connectivity_length
        integer(c_int), intent(out) :: element_connectivity(*)
      end function iMOAB_GetBlockElementConnectivities

      integer(c_int) function iMOAB_GetElementConnectivity(pid, elem_index, connectivity_length, &
                                                          element_connectivity) bind(C, name='iMOAB_GetElementConnectivity')
        use, intrinsic :: iso_c_binding, only: c_int
        integer(c_int), intent(in) :: pid
        integer(c_int), intent(in) :: elem_index
        integer(c_int), intent(in) :: connectivity_length
        integer(c_int), intent(out) :: element_connectivity(*)
      end function iMOAB_GetElementConnectivity

      integer(c_int) function iMOAB_GetElementOwnership(pid, global_block_ID, num_elements_in_block, &
                                                        element_ownership) bind(C, name='iMOAB_GetElementOwnership')
        use, intrinsic :: iso_c_binding, only: c_int
        integer(c_int), intent(in) :: pid
        integer(c_int), intent(in) :: global_block_ID
        integer(c_int), intent(out) :: num_elements_in_block
        integer(c_int), intent(out) :: element_ownership(*)
      end function iMOAB_GetElementOwnership
